# BcpProjectTemplate

./: .gitignore  CMakeLists.txt  HELP.md
src/: main.cpp
